@@ -29,5 +29,8 @@
                 <span data-a11y-result-selector-text></span>
             </button>
         </template>
+        <template id="w-a11y-result-outline-template">
+            <div class="w-a11y-result__outline" data-a11y-result-outline></div>
+        </template>
     {% enddialog %}
 {% endblock %}
